[package]
name = "maghemite"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mattwiller/maghemite"
license = "BSD-3-Clause"
description = "Experimental FHIRPath parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota = "0.2.3"
log = "0.4.17"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3.0"
env_logger = "0.10.0"

[[bench]]
name = "criterion_benchmark"
harness = false
