[package]
name = "maghemite"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/mattwiller/maghemite"
license = "Apache-2.0"
description = "Experimental FHIRPath parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
iota = "0.2.3"
itertools = "0.10.5"
log = "0.4.17"
rust_decimal = "1.29.1"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3.0"
env_logger = "0.10.0"

[[bench]]
name = "criterion_benchmark"
harness = false
