[package]
name = "maghemite"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/mattwiller/maghemite"
license = "Apache-2.0"
description = "Experimental FHIRPath parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
iota = "0.2"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rust_decimal = "1.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3"
env_logger = "0.10"

[[bench]]
name = "criterion_benchmark"
harness = false
